--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.16.4
+minecraft_version=1.16.5
+forge_version=36.0.21
 mappings_version=20201028-1.16.3
 mekanism_version=1.16.4-10.0.19.446
 jb_annotations=20.1.0
