--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+import java.util.regex.Pattern
+import java.util.regex.Matcher
+
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
@@ -19,7 +22,7 @@ idea {
     }
 }
 
-version = '0.1'
+version = '0.0'
 group = 'sylvantus.titanrealms' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'titanrealms'
 
@@ -165,6 +168,59 @@ jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
+processResources {
+    Matcher matcherVersion
+
+    def configFile = file("config.xml")
+        def configText = configFile.getText()
+
+        def patternDev = Pattern.compile("<isDev>(\\w+)</isDev>")
+        def matcherDev = patternDev.matcher(configText)
+        matcherDev.find()
+        def isDev = Boolean.parseBoolean(matcherDev.group(1))
+
+    if (isDev) {
+        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)\\-(\\w+).(\\d+)</version>")
+        matcherVersion = pattern.matcher(configText)
+        matcherVersion.find()
+
+        def major = Integer.parseInt(matcherVersion.group(1))
+        def minor = Integer.parseInt(matcherVersion.group(2))
+        def patch = Integer.parseInt(matcherVersion.group(3))
+        def dev = matcherVersion.group(4)
+        def devVersion = Integer.parseInt(matcherVersion.group(5))
+
+        project.version = major + "." + minor + "." + patch + "-" + dev + "." + devVersion
+    } else {
+        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)</version>")
+        matcherVersion = pattern.matcher(configText)
+        matcherVersion.find()
+
+        def major = Integer.parseInt(matcherVersion.group(1))
+        def minor = Integer.parseInt(matcherVersion.group(2))
+        def patch = Integer.parseInt(matcherVersion.group(3))
+
+        project.version = major + "." + minor + "." + patch
+    }
+
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", minecraft_version
+
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+
+        // replace version and mcversion
+        expand 'version':project.version, 'mcversion':minecraft_version
+    }
+
+    // copy everything else, thats not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -177,3 +233,86 @@ publishing {
         }
     }
 }
+
+task incrementPatch {
+    String oldVersion
+    String newVersion
+    Matcher matcherVersion
+
+    println(":incrementPatch - Incrementing Patch Version ...")
+    def configFile = file("config.xml")
+    def configText = configFile.getText()
+
+    def patternDev = Pattern.compile("<isDev>(\\w+)</isDev>")
+    def matcherDev = patternDev.matcher(configText)
+    matcherDev.find()
+    def isDev = Boolean.parseBoolean(matcherDev.group(1))
+
+    if(isDev) {
+        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)\\-(\\w+).(\\d+)</version>")
+        matcherVersion = pattern.matcher(configText)
+        matcherVersion.find()
+
+        def major = Integer.parseInt(matcherVersion.group(1))
+        def minor = Integer.parseInt(matcherVersion.group(2))
+        def patch = Integer.parseInt(matcherVersion.group(3))
+        def dev = matcherVersion.group(4)
+        def devVersion = Integer.parseInt(matcherVersion.group(5))
+
+        oldVersion = major + "." + minor + "." + patch + "-" + dev + "." + devVersion
+        newVersion = major + "." + minor + "." + (patch + 1)
+    }
+    else {
+        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)</version>")
+        matcherVersion = pattern.matcher(configText)
+        matcherVersion.find()
+
+        def major = Integer.parseInt(matcherVersion.group(1))
+        def minor = Integer.parseInt(matcherVersion.group(2))
+        def patch = Integer.parseInt(matcherVersion.group(3))
+
+        oldVersion = major + "." + minor + "." + patch
+        newVersion = major + "." + minor + "." + (patch + 1)
+    }
+
+    println(":incrementPatch - Current Version: " + oldVersion)
+    println(":incrementPatch - New Version:     " + newVersion)
+    project.version = newVersion
+
+    def configVersion = matcherVersion.replaceAll("<version>"+ newVersion +"</version>")
+    matcherDev = patternDev.matcher(configVersion)
+    matcherDev.find()
+    def configIsDev = matcherDev.replaceAll("<isDev>false</isDev>")
+    configFile.write(configIsDev)
+}
+
+task getModData() {
+    println(":getModData - Getting mod-related data from config")
+    def configFile = file("config.xml")
+    def configText = configFile.getText()
+
+    def patternModid = Pattern.compile("<modid>(\\p{Print}+)</modid>")
+    def patternMcVersion = Pattern.compile("<mcversion>(\\p{Print}+)</mcversion>")
+    def patternGroup = Pattern.compile("<group>(\\p{Graph}+)</group>")
+
+    def matcherModid = patternModid.matcher(configText)
+    def matcherMcVersion = patternMcVersion.matcher(configText)
+    def matcherGroup = patternGroup.matcher(configText)
+    matcherModid.find()
+    matcherMcVersion.find()
+    matcherGroup.find()
+
+    def configModid = matcherModid.group(1)
+    def configMcVersion = matcherMcVersion.group(1)
+    def configGroup = matcherGroup.group(1)
+
+    println(":getModData - ModID:      " + configModid)
+    println(":getModData - MC-Version: " + configMcVersion)
+    println(":getModData - Group:      " + configGroup)
+
+    project.archivesBaseName = configModid + "-" + configMcVersion
+    println(project.archivesBaseName)
+    project.group = configGroup
+}
+
+build.mustRunAfter getModData
