--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-import java.util.regex.Pattern
-import java.util.regex.Matcher
-
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
@@ -11,6 +8,7 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'maven-publish'
 apply plugin: 'java'
@@ -22,9 +20,21 @@ idea {
     }
 }
 
-version = '0.0'
-group = 'sylvantus.titanrealms' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'titanrealms'
+ext.configFile = file('build.properties')
+ext.config = parseConfig(configFile)
+
+def versionIsDev = Boolean.parseBoolean(config.isDev.toString())
+
+if (versionIsDev) {
+    project.version = "${config.mc_version}-${config.major_version}.${config.minor_version}.${config.patch_version}-dev.${config.dev_version}"
+} else {
+    project.version = "${config.mc_version}-${config.major_version}.${config.minor_version}.${config.patch_version}"
+}
+project.archivesBaseName = "${config.mod_name}-${config.mc_version}"
+project.group = config.group.toString();
+//version = "${config.mc_version.toString()}-${config.version.toString()}"
+//group = "${config.group.toString()}"
+//archivesBaseName = config.mod_name.toString()
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation"
@@ -147,6 +157,20 @@ dependencies {
     runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:${top_version}")
 }
 
+def parseConfig(File config) {
+    config.withReader {
+        def prop = new Properties()
+        prop.load(it)
+        return (new ConfigSlurper().parse(prop))
+    }
+}
+
+def saveConfig() {
+    configFile.withWriter {
+        config.toProperties().store(it, "")
+    }
+}
+
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
@@ -155,11 +179,12 @@ jar {
             "Specification-Vendor": "sylvantus",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
+            "Implementation-Version": "${project.version}",
             "Implementation-Vendor" :"sylvantus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+    classifier = 'universal'
 }
 
 // Example configuration to allow publishing using the maven-publish task
@@ -167,59 +192,6 @@ jar {
 jar.finalizedBy('reobfJar') 
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
-
-processResources {
-    Matcher matcherVersion
-
-    def configFile = file("config.xml")
-        def configText = configFile.getText()
-
-        def patternDev = Pattern.compile("<isDev>(\\w+)</isDev>")
-        def matcherDev = patternDev.matcher(configText)
-        matcherDev.find()
-        def isDev = Boolean.parseBoolean(matcherDev.group(1))
-
-    if (isDev) {
-        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)\\-(\\w+).(\\d+)</version>")
-        matcherVersion = pattern.matcher(configText)
-        matcherVersion.find()
-
-        def major = Integer.parseInt(matcherVersion.group(1))
-        def minor = Integer.parseInt(matcherVersion.group(2))
-        def patch = Integer.parseInt(matcherVersion.group(3))
-        def dev = matcherVersion.group(4)
-        def devVersion = Integer.parseInt(matcherVersion.group(5))
-
-        project.version = major + "." + minor + "." + patch + "-" + dev + "." + devVersion
-    } else {
-        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)</version>")
-        matcherVersion = pattern.matcher(configText)
-        matcherVersion.find()
-
-        def major = Integer.parseInt(matcherVersion.group(1))
-        def minor = Integer.parseInt(matcherVersion.group(2))
-        def patch = Integer.parseInt(matcherVersion.group(3))
-
-        project.version = major + "." + minor + "." + patch
-    }
-
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", minecraft_version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':minecraft_version
-    }
-
-    // copy everything else, thats not the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-}
 
 publishing {
     publications {
@@ -235,84 +207,45 @@ publishing {
 }
 
 task incrementPatch {
-    String oldVersion
-    String newVersion
-    Matcher matcherVersion
-
-    println(":incrementPatch - Incrementing Patch Version ...")
-    def configFile = file("config.xml")
-    def configText = configFile.getText()
-
-    def patternDev = Pattern.compile("<isDev>(\\w+)</isDev>")
-    def matcherDev = patternDev.matcher(configText)
-    matcherDev.find()
-    def isDev = Boolean.parseBoolean(matcherDev.group(1))
-
-    if(isDev) {
-        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)\\-(\\w+).(\\d+)</version>")
-        matcherVersion = pattern.matcher(configText)
-        matcherVersion.find()
-
-        def major = Integer.parseInt(matcherVersion.group(1))
-        def minor = Integer.parseInt(matcherVersion.group(2))
-        def patch = Integer.parseInt(matcherVersion.group(3))
-        def dev = matcherVersion.group(4)
-        def devVersion = Integer.parseInt(matcherVersion.group(5))
-
-        oldVersion = major + "." + minor + "." + patch + "-" + dev + "." + devVersion
-        newVersion = major + "." + minor + "." + (patch + 1)
+    doFirst {
+        println(":incrementPatch - Incrementing patch version")
+        config.patch_version = (Integer.parseInt(config.patch_version.toString())) + 1
+        saveConfig()
     }
-    else {
-        def pattern = Pattern.compile("<version>(\\d+)\\.(\\d+)\\.(\\d+)</version>")
-        matcherVersion = pattern.matcher(configText)
-        matcherVersion.find()
-
-        def major = Integer.parseInt(matcherVersion.group(1))
-        def minor = Integer.parseInt(matcherVersion.group(2))
-        def patch = Integer.parseInt(matcherVersion.group(3))
-
-        oldVersion = major + "." + minor + "." + patch
-        newVersion = major + "." + minor + "." + (patch + 1)
-    }
-
-    println(":incrementPatch - Current Version: " + oldVersion)
-    println(":incrementPatch - New Version:     " + newVersion)
-    project.version = newVersion
-
-    def configVersion = matcherVersion.replaceAll("<version>"+ newVersion +"</version>")
-    matcherDev = patternDev.matcher(configVersion)
-    matcherDev.find()
-    def configIsDev = matcherDev.replaceAll("<isDev>false</isDev>")
-    configFile.write(configIsDev)
 }
 
-task getModData() {
-    println(":getModData - Getting mod-related data from config")
-    def configFile = file("config.xml")
-    def configText = configFile.getText()
-
-    def patternModid = Pattern.compile("<modid>(\\p{Print}+)</modid>")
-    def patternMcVersion = Pattern.compile("<mcversion>(\\p{Print}+)</mcversion>")
-    def patternGroup = Pattern.compile("<group>(\\p{Graph}+)</group>")
-
-    def matcherModid = patternModid.matcher(configText)
-    def matcherMcVersion = patternMcVersion.matcher(configText)
-    def matcherGroup = patternGroup.matcher(configText)
-    matcherModid.find()
-    matcherMcVersion.find()
-    matcherGroup.find()
-
-    def configModid = matcherModid.group(1)
-    def configMcVersion = matcherMcVersion.group(1)
-    def configGroup = matcherGroup.group(1)
-
-    println(":getModData - ModID:      " + configModid)
-    println(":getModData - MC-Version: " + configMcVersion)
-    println(":getModData - Group:      " + configGroup)
-
-    project.archivesBaseName = configModid + "-" + configMcVersion
-    println(project.archivesBaseName)
-    project.group = configGroup
+task incrementMinor {
+    doFirst {
+        println(":incrementMinor - Incrementing minor version")
+        config.patch_version = 0
+        config.minor_version = (Integer.parseInt(config.minor_version.toString())) + 1
+        saveConfig()
+    }
 }
 
-build.mustRunAfter getModData
+task incrementMajor {
+    doFirst {
+        println(":incrementMajor - Incrementing major version")
+        config.patch_version = 0
+        config.minor_version = 0
+        config.major_version = (Integer.parseInt(config.major_version.toString())) + 1
+        saveConfig()
+    }
+}
+
+task setDevVersion {
+    doFirst {
+        def isDev = Boolean.parseBoolean(config.isDev.toString())
+
+        if (isDev) {
+            println(":setDevVersion - incrementing dev version")
+            config.dev_version = (Integer.parseInt(config.dev_version.toString())) + 1
+        } else {
+            println(":setDevVersion - setting build as dev version")
+            config.isDev = true
+        }
+        saveConfig()
+    }
+}
+
+tasks.build.dependsOn incrementPatch
