--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="GNU GPLv3"
 # issueTrackerURL="http://my.issue.tracker/"
 [[mods]]
 modId="titanrealms"
-version="0.1"
+version="${file.jarVersion}"
 displayName="Titan Realms"
 # updateJSONURL="http://myurl.me/"
 # displayURL="http://example.com/"
