Added new entries to access transformers. Implemented FeatureUtils helper class and TitanRealmsTreeGenerator base class

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -36,3 +36,11 @@ protected net.minecraft.item.ArmorItem field_185084_n # ARMOR_MODIFIERS
 public net.minecraft.network.play.ServerPlayNetHandler field_147365_f #floatingTickCount
 
 protected net.minecraft.tileentity.TileEntity field_195045_e # cachedBlockState
+
+# Used in Trunk Mover Upper
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236906_d_
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236907_e_
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236908_f_
+
+# Used for FeatureUtils' Bresenham Branches
+public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer func_236911_a_(Lnet/minecraft/world/gen/IWorldGenerationReader;Ljava/util/Random;Lnet/minecraft/util/math/BlockPos;Ljava/util/Set;Lnet/minecraft/util/math/MutableBoundingBox;Lnet/minecraft/world/gen/feature/BaseTreeFeatureConfig;)Z # func_236911_a_
