--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,6 +37,17 @@ public net.minecraft.network.play.ServerPlayNetHandler field_147365_f #floatingT
 
 protected net.minecraft.tileentity.TileEntity field_195045_e # cachedBlockState
 
+# TODO TEMPORARY - REMOVE THESE WHEN PROPER BIOMEPROVIDER API STUFF IS SETUP FOR DATAGEN ok finished yelling
+# These are used in BiomeGenerator
+protected net.minecraft.data.BiomeProvider field_244195_b
+protected net.minecraft.data.BiomeProvider field_244196_c
+protected net.minecraft.data.BiomeProvider field_244197_d
+
+# No API yet for Foliage / Trunk Placers / Tree Decor yet
+public net.minecraft.world.gen.foliageplacer.FoliagePlacerType <init>(Lcom/mojang/serialization/Codec;)V
+public net.minecraft.world.gen.trunkplacer.TrunkPlacerType <init>(Lcom/mojang/serialization/Codec;)V
+public net.minecraft.world.gen.treedecorator.TreeDecoratorType <init>(Lcom/mojang/serialization/Codec;)V
+
 # Used in Trunk Mover Upper
 public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236906_d_
 public net.minecraft.world.gen.trunkplacer.AbstractTrunkPlacer field_236907_e_
